# cs8803-mls-final

./: README.md  antisteer.ipynb  epo.ipynb  epo_bruteforce.py  generate_sv.ipynb  jupyter_gpu.job  plot.ipynb  pyproject.toml
caa_sv/: Llama-3.1-8B-Instruct-agreeableness-800.json  Llama-3.1-8B-Instruct-conscientiousness-800.json  Llama-3.1-8B-Instruct-corrigible-neutral-HHH-800.json  Llama-3.1-8B-Instruct-extraversion-800.json  Llama-3.1-8B-Instruct-neuroticism-800.json  Llama-3.1-8B-Instruct-openness-800.json  Llama-3.1-8B-Instruct-politically-liberal-800.json  Llama-3.1-8B-Instruct-power-seeking-inclination-800.json  Llama-3.1-8B-Instruct-self-awareness-general-ai-800.json
histories/histories_8B/: agreeableness_run_-1.jsonl  agreeableness_run_-2.jsonl  agreeableness_run_-3.jsonl  agreeableness_run_-4.jsonl  agreeableness_run_-5.jsonl  agreeableness_run_0.jsonl  agreeableness_run_1.jsonl  agreeableness_run_2.jsonl  agreeableness_run_3.jsonl  agreeableness_run_4.jsonl  agreeableness_run_5.jsonl  conscientiousness_run_-1.jsonl  conscientiousness_run_-2.jsonl  conscientiousness_run_-3.jsonl  conscientiousness_run_-4.jsonl  conscientiousness_run_-5.jsonl  conscientiousness_run_0.jsonl  conscientiousness_run_1.jsonl  conscientiousness_run_2.jsonl  conscientiousness_run_3.jsonl  conscientiousness_run_4.jsonl  conscientiousness_run_5.jsonl  corrigible-neutral-HHH_run_-1.jsonl  corrigible-neutral-HHH_run_-2.jsonl  corrigible-neutral-HHH_run_-3.jsonl  corrigible-neutral-HHH_run_-4.jsonl  corrigible-neutral-HHH_run_-5.jsonl  corrigible-neutral-HHH_run_0.jsonl  (+71 more)
