[project]
name = "final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "more-itertools>=10.8.0",
    "notebook>=7.5.0",
    "sae-lens>=6.22.2",
    "submitit>=1.5.3",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
